--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Evolver events app",
   "main": "server.js",
+  "engines": {
+	"node": "^18"
+  },
   "directories": {
     "test": "tests"
   },
