--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Evolver events app",
   "main": "server.js",
+  "type": "module",
   "engines": {
-	"node": "^18"
+    "node": "^18"
   },
   "directories": {
     "test": "tests"
@@ -25,5 +26,9 @@
   "bugs": {
     "url": "https://github.com/hngx-org/Evolver-events-backend/issues"
   },
-  "homepage": "https://github.com/hngx-org/Evolver-events-backend#readme"
+  "homepage": "https://github.com/hngx-org/Evolver-events-backend#readme",
+  "dependencies": {
+    "mysql2": "^3.6.1",
+    "sequelize": "^6.33.0"
+  }
 }
