--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Evolver events app",
   "main": "server.js",
   "engines": {
-	"node": "^18"
+    "node": "^18"
   },
   "directories": {
     "test": "tests"
@@ -25,5 +25,10 @@
   "bugs": {
     "url": "https://github.com/hngx-org/Evolver-events-backend/issues"
   },
-  "homepage": "https://github.com/hngx-org/Evolver-events-backend#readme"
+  "homepage": "https://github.com/hngx-org/Evolver-events-backend#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mysql2": "^3.6.1",
+    "sequelize": "^6.33.0"
+  }
 }
