--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/hngx-org/Evolver-events-backend#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "mysql2": "^3.6.1",
     "sequelize": "^6.33.0"
   }
