--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DB_NAME=
-DB_USER=
-DB_PASS=
-DB_HOST=
+DB_NAME=dbevent
+DB_USER=eventapp
+DB_PASS=event_43app
+DB_HOST=ls-748579094099b0766a964caacd8cc4a4b73ec231.czwhjvdkncwk.us-east-2.rds.amazonaws.com
+DB_PORT=3306
