--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   },
   "homepage": "https://github.com/hngx-org/Evolver-events-backend#readme",
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.1",
+    "passport": "^0.5.0",
     "sequelize": "^6.33.0"
   }
 }
