--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
     "nodemon": "^3.0.1"
   }
 }
