--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "tests"
   },
   "scripts": {
-	"db:test": "node tests/db.test.js",
+    "db:test": "node tests/db.test.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "dev": "nodemon app.js"
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/hngx-org/Evolver-events-backend#readme",
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -34,12 +35,13 @@
     "http-status-codes": "^2.3.0",
     "joi": "^17.10.2",
     "mysql2": "^3.6.1",
+    "passport": "^0.6.0",
     "sequelize": "^6.33.0",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "prettier": "^3.0.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3"
   }
 }
