--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,4 +17,4 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SERVER_SSH_PORT }}
           script: |
-            sudo systemctl restart evolver
+            sudo systemctl restart dev_evolver.service
