--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
   },
   "homepage": "https://github.com/hngx-org/Evolver-events-backend#readme",
   "dependencies": {
+    "-": "^0.0.1",
     "mysql2": "^3.6.1",
-    "sequelize": "^6.33.0"
+    "save-dev": "^0.0.1-security",
+    "sequelize": "^6.33.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
