--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "http-status-codes": "^2.3.0",
     "joi": "^17.10.2",
     "mysql2": "^3.6.1",
-    "passport": "^0.6.0",
+    "passport": "~0.5",
     "passport-google-oauth2": "^0.2.0",
     "passport-twitter": "^1.0.4",
     "sequelize": "^6.33.0",
